src/objects/Management_Device_Type__c.object
<CustomObject>
    <fields>
        <fullName>PTP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rancid_Device_Type__c</fullName>
        <label>Rancid Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>foundry</fullName>
                </value>
                <value>
                    <fullName>cisco</fullName>
                </value>
                <value>
                    <fullName>edgemax</fullName>
                </value>
                <value>
                    <fullName>zebra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siklu_PTP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Siklu PTP</label>
        <type>Checkbox</type>
    </fields>
    <label>Management Device Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Management Device Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>